Move coder prototypes to static.h.  Remove defunct HDF and libmpeg2 support.

--- a/coders/Makefile.am
+++ b/coders/Makefile.am
@@ -41,7 +41,7 @@ endif
 MAGICK_CODER_SRCS = \
   art.c avi.c avs.c bmp.c caption.c clipboard.c cmyk.c cut.c dcm.c \
   dib.c dps.c dpx.c emf.c ept.c fax.c fits.c fpx.c gif.c gradient.c \
-  gray.c hdf.c histogram.c html.c icon.c jbig.c jp2.c jpeg.c label.c \
+  gray.c histogram.c html.c icon.c jbig.c jp2.c jpeg.c label.c \
   locale.c logo.c map.c mat.c matte.c meta.c miff.c mono.c mpc.c mpeg.c \
 	mpr.c msl.c mtv.c mvg.c null.c otb.c palm.c pcd.c pcl.c pcx.c pdb.c pdf.c \
   pict.c pix.c plasma.c png.c pnm.c preview.c ps.c ps2.c ps3.c psd.c \
@@ -87,7 +87,7 @@ pkgdata_DATA =
 # Modules which are to be built
 pkg_LTLIBRARIES = \
   art.la avi.la avs.la bmp.la caption.la cmyk.la cut.la dcm.la dib.la dps.la \
-  dpx.la ept.la fax.la fits.la fpx.la gif.la gradient.la gray.la hdf.la \
+  dpx.la ept.la fax.la fits.la fpx.la gif.la gradient.la gray.la \
   histogram.la html.la icon.la jbig.la jp2.la jpeg.la label.la locale.la \
 	logo.la map.la mat.la matte.la meta.la miff.la mono.la mpc.la mpeg.la mpr.la \
 	msl.la mtv.la mvg.la null.la otb.la palm.la pcd.la pcl.la pcx.la pdb.la \
@@ -206,9 +206,9 @@ gradient_la_LDFLAGS = $(MODULECOMMONFLAGS)
 gradient_la_LIBADD  = $(LIBMAGICK)
 
 # HDF module
-hdf_la_SOURCES      = hdf.c
-hdf_la_LDFLAGS      = $(MODULECOMMONFLAGS)
-hdf_la_LIBADD       = $(LIBMAGICK) @LIB_HDF@ @LIB_JPEG@ @LIB_ZLIB@
+# hdf_la_SOURCES      = hdf.c
+# hdf_la_LDFLAGS      = $(MODULECOMMONFLAGS)
+# hdf_la_LIBADD       = $(LIBMAGICK) @LIB_HDF@ @LIB_JPEG@ @LIB_ZLIB@
 
 # HISTOGRAM module
 histogram_la_SOURCES = histogram.c
@@ -293,7 +293,7 @@ mpc_la_LIBADD       = $(LIBMAGICK)
 # MPEG module
 mpeg_la_SOURCES     = mpeg.c
 mpeg_la_LDFLAGS     = $(MODULECOMMONFLAGS)
-mpeg_la_LIBADD      = $(LIBMAGICK) @LIB_MPEG2@
+mpeg_la_LIBADD      = $(LIBMAGICK)
 
 # MPR module
 mpr_la_SOURCES      = mpr.c
