Updated build tools.

--- a/fpx/configure.ac
+++ b/fpx/configure.ac
@@ -1,4 +1,4 @@
-AC_PREREQ(2.2)
+AC_PREREQ(2.54)
 AC_INIT(fpx/buffdesc.h)
 
 # Set version
@@ -7,7 +7,6 @@ MINOR_VERSION=2
 MICRO_VERSION=0
 PATCH_VERSION=4
 echo "configuring Digital Imaging Group FlashPIX $MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION.$PATCH_VERSION"
-AC_CANONICAL_SYSTEM
 AC_SUBST(MAJOR_VERSION)dnl
 AC_SUBST(MINOR_VERSION)dnl
 AC_SUBST(MICRO_VERSION)dnl
@@ -34,6 +33,7 @@ CPPFLAGS="-D_UNIX $CPPFLAGS"
 
 # Check for programs
 AC_PROG_CC
+AC_PROG_CC_STDC
 AC_PROG_CPP
 AM_PROG_LD
 AC_SUBST(LD)
@@ -44,7 +44,6 @@ AC_PROG_LN_S
 #
 # Tests for Windows
 #
-AC_CYGWIN
 AC_EXEEXT
 AC_OBJEXT
 
@@ -56,16 +55,12 @@ AC_C_BIGENDIAN
 AC_CHECK_HEADERS(wchar.h)
 
 #
-# Configure libtool and ltdl
+# Configure libtool
 #
 AC_ENABLE_SHARED(yes)
 AC_ENABLE_STATIC(yes)
-AC_LIBLTDL_CONVENIENCE
-# Substitute INCLTDL and LIBLTDL in the Makefiles
-AC_SUBST(INCLTDL)
-AC_SUBST(LIBLTDL)
-# Configure libtool
 AC_PROG_LIBTOOL
+AC_SUBST(LIBTOOL_DEPS)
 
 AC_LANG_CPLUSPLUS
 AC_PROG_CXX
